--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -3604,14 +3604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gh45$Dsfaad#Jl38Jj Dsf Gfg687(&(*Ghyuf09)) #Sd#Ljj Ads G\n"
+      "Ll\n"
      ]
     }
    ],
@@ -3620,7 +3620,8 @@
     "# n='#@aizen so#@#suke ichigo'\n",
     "# n='Hello haIi World WelV3coMe to py$hon cLAs'\n",
     "# n='$dsfAAD#jl38'\n",
-    "n='gh45$dsfAAD#jl38jj dsf gfg687(&(*ghyuf09)) #sd#ljj Ads g'\n",
+    "# n='gh45$dsfAAD#jl38jj dsf gfg687(&(*ghyuf09)) #sd#ljj Ads g'\n",
+    "n='LL'\n",
     "s=''\n",
     "i=0\n",
     "while i<len(n):\n",
