--- a/py_course/functional_pro/dir_str.ipynb
+++ b/py_course/functional_pro/dir_str.ipynb
@@ -196,27 +196,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@Imran Khan 7777Janab5\n"
+      "@*Imran Khan 7777Janab$*H\n",
+      "@*imran Khan 7777Janab$*h\n"
      ]
     }
    ],
    "source": [
     "#title()\n",
-    "st='@imran khan 7777janab5' #sir\n",
-    "st.title()\n",
-    "def u_title(coll):\n",
+    "st='@imran khan 7777janab5' #sir:wrong output check\n",
+    "st='@*imran khan 7777jAnab$*h'\n",
+    "print(st.title())\n",
+    "def u_title_sir(coll):\n",
     "    temp=0\n",
     "    res=''\n",
     "    if 'a'<=coll[0]<='z':\n",
     "        res+=chr(ord(coll[0])-32)\n",
-    "        temp=1\n",
+    "        # temp=1\n",
     "    elif 'A'<=coll[0]<='Z':\n",
     "        res+=coll[0]\n",
     "        temp=1\n",
@@ -235,32 +237,33 @@
     "            res+=coll[temp]\n",
     "        temp+=1\n",
     "    return res\n",
-    "res=u_title(st)\n",
+    "res=u_title_sir(st)\n",
     "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "@Imran Khan 7777Janab$A\n",
-      "@Imran Khan 7777Janab$A\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Ll'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "n='@imran khan 7777jAnab$a'\n",
-    "print(n.title())\n",
+    "st='LL'\n",
     "def u_title(n):\n",
     "    s=''\n",
     "    i=0\n",
     "    while i<len(n):\n",
-    "        if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' ):\n",
+    "        if 'A'<=n[i]<='Z' and i==0:\n",
     "            s+=n[i]\n",
     "        elif 'a'<=n[i]<='z' and i==0:\n",
     "                s+=chr(ord(n[i])-32)\n",
@@ -275,21 +278,92 @@
     "                s+=n[i]\n",
     "        i+=1\n",
     "    return s\n",
-    "print(u_title(n))    "
+    "u_title(st) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@*Imran Khan 7777Janab$*H\n",
+      "@*Imran Khan 7777Janab$*H\n"
+     ]
+    }
+   ],
+   "source": [
+    "#OR\n",
+    "st='@*imran khan 7777jAnab$*h'\n",
+    "# st='LL'\n",
+    "# st='LLl'\n",
+    "print(st.title())\n",
+    "def u_title_2(n):\n",
+    "    s=''\n",
+    "    i=0\n",
+    "    while i<len(n):\n",
+    "        if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' ):\n",
+    "            s+=n[i]\n",
+    "        elif 'a'<=n[i]<='z' and i==0:\n",
+    "                s+=chr(ord(n[i])-32)\n",
+    "        else:\n",
+    "            if  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z') and 'a'<=n[i]<='z':\n",
+    "                s+=chr(ord(n[i])-32)\n",
+    "            elif 'A'<=n[i-1]<='Z' and 'A'<=n[i]<='Z' and i!=0:\n",
+    "                s+=chr(ord(n[i])+32)\n",
+    "            elif 'a'<=n[i-1]<='z' and 'A'<=n[i]<='Z' and i!=0:\n",
+    "                s+=chr(ord(n[i])+32)\n",
+    "            else:\n",
+    "                s+=n[i]\n",
+    "        i+=1\n",
+    "    return s\n",
+    "print(u_title_2(st))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lllll'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n='LLlll'\n",
+    "n.title()\n",
+    "u_title(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,8 +372,9 @@
     "#istitle()\n",
     "# print(res)\n",
     "# res.istitle()\n",
-    "st='@Imran Khan 7777Janab2' #sir\n",
-    "def u_istitle(coll):\n",
+    "st='@Imran KJhan 7777Janab2' #sir:wrong output check\n",
+    "print(st.istitle())\n",
+    "def u_istitle_sir(coll):\n",
     "    if 'a'<=coll[0]<='z':\n",
     "        return False\n",
     "    i=0\n",
@@ -309,7 +384,99 @@
     "                return False\n",
     "        i+=1\n",
     "    return True\n",
-    "u_istitle(st)\n"
+    "u_istitle_sir(st)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# st='@Imran KKhan 7777Janab2' \n",
+    "# st='A'\n",
+    "st='#5'\n",
+    "# st='#'\n",
+    "# st='@Imran Khan 7777Janab$*H'\n",
+    "print(st.istitle())\n",
+    "def u_istitle(coll):\n",
+    "    if 'a'<=coll[0]<='z':\n",
+    "        return False\n",
+    "    i=0\n",
+    "    while i<len(coll):\n",
+    "        if not('a'<=coll[i-1]<='z' or 'A'<=coll[i-1]<='Z') and 'a'<=coll[i]<='z':\n",
+    "            return False\n",
+    "        elif 'A'<=coll[i-1]<='Z' and 'A'<=coll[i]<='Z' and i!=0:\n",
+    "            return False\n",
+    "        elif 'a'<=coll[i-1]<='z' and 'A'<=coll[i]<='Z':\n",
+    "            return False\n",
+    "        else:\n",
+    "            j=0\n",
+    "            while j<len(coll):\n",
+    "                if not('a'<=coll[j]<='z' or 'A'<=coll[j]<='Z'):\n",
+    "                    pass\n",
+    "                else:\n",
+    "                    break\n",
+    "                j+=1\n",
+    "            if j==len(coll):# and j!=0:\n",
+    "                return False\n",
+    "        i+=1\n",
+    "    return True\n",
+    "print(u_istitle(st))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# st='H1Elo World 2Hii '\n",
+    "#st='1Elo Wor1Ld'\n",
+    "st='4562'\n",
+    "print(st.istitle())\n",
+    "def u_istitle_bhanu(coll):\n",
+    "    if 'a'<=coll[0]<='z':\n",
+    "        return False\n",
+    "    i=1\n",
+    "    while i<len(coll):\n",
+    "        if not('A'<=coll[i-1]<='Z' or 'a'<=coll[i-1]<='z') and 'a'<=coll[i]<='Z':\n",
+    "           return False\n",
+    "        elif 'A'<=coll[i-1]<='Z' and 'A'<=coll[i]<='Z':\n",
+    "            return False\n",
+    "        elif 'a'<=coll[i-1]<='z' and 'A'<=coll[i]<='Z':\n",
+    "            return False\n",
+    "        \n",
+    "        i+=1\n",
+    "    return True\n",
+    "u_istitle_bhanu(st)"
    ]
   },
   {
@@ -655,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -718,6 +885,270 @@
     "        return res[:-(len(sep))]\n",
     "print(join(st,'-'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#count()\n",
+    "st='helloworld'\n",
+    "# st.count('l')\n",
+    "# st.count('l',5,9)\n",
+    "def u_count(coll,ele,start=0,end=None):\n",
+    "    if end==None:\n",
+    "        end=len(coll)\n",
+    "    coun=0\n",
+    "    for i in range(start,end):\n",
+    "        if coll[i]==ele:\n",
+    "            coun+=1\n",
+    "    return coun\n",
+    "u_count(st,'l',5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find()\n",
+    "st='helloworld'\n",
+    "print(st.index('rld'))\n",
+    "def u_index(coll,ele=''):\n",
+    "    for i in range(len(coll)):\n",
+    "        if coll[i]==ele[0]:\n",
+    "            if ele in coll:\n",
+    "                return i\n",
+    "    return -1\n",
+    "u_index(st,'rld')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#index()\n",
+    "st='hell3oworld'\n",
+    "# st='hello'\n",
+    "print(st.index('l3'))\n",
+    "def u_index(coll,ele=''):\n",
+    "    for i in range(len(coll)):\n",
+    "        if coll[i:len(ele)+i]==ele:\n",
+    "                return i\n",
+    "    return  'substring not present'\n",
+    "print(u_index(st,'l3'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st=\"helloworld\"\n",
+    "print(st.index('lo'))\n",
+    "def u_index_sir(coll,ele,start=0,end=None): #sir:wrong output check\n",
+    "    if end==None:\n",
+    "        end=len(coll)\n",
+    "    if ele not in coll:\n",
+    "        return -1\n",
+    "    while start<end:\n",
+    "        if ele==coll[start]:\n",
+    "            return start\n",
+    "        start+=1\n",
+    "    return -1\n",
+    "u_index_sir(st,'lo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what is difference between FIND and INDEX\n",
+    "FIND: 1.if element is not present it return -1\n",
+    "INDEX: 1. if element is not present it returns value error\n",
+    "2.IF ELEMENT IS PRESENT IT RETURN FIRST OCCURENCE VALUE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#rfind()\n",
+    "st='helloworld'\n",
+    "# st.rfind('l',1,5)\n",
+    "# st.rfind('l',5,7)\n",
+    "print(st.rfind('ll')) # sir: wrong output check-code\n",
+    "def u_rfind(coll,ele,start=0,end=None):\n",
+    "    if end==None:\n",
+    "        end=len(coll)-1\n",
+    "    if ele not in coll[start:end]:\n",
+    "        return -1\n",
+    "    while end>start:\n",
+    "        if coll[end]==ele:\n",
+    "            return end\n",
+    "        end-=1\n",
+    "print(u_rfind(st,'ll'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', '', 'hello', 'world', 'wecome', 'to', 'pys', '', '']\n",
+      "['hello', 'world', 'wecome', 'to', 'pys']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#split()\n",
+    "st='  hello world wecome to pys  '\n",
+    "# st.split()\n",
+    "# st.split('l') #split with respect to element instead of space' '\n",
+    "# st.split(maxsplit=2) #no.of times split and remaining is considered as 1 word\n",
+    "print(st.split(' '))\n",
+    "def u_split(coll,ele=' ',maxsplit=0):\n",
+    "    if ele==' ':\n",
+    "        l=[]\n",
+    "        r=''\n",
+    "        index=0\n",
+    "        count=0\n",
+    "        for i in coll:\n",
+    "            if i!=ele:\n",
+    "                r+=i\n",
+    "            else:\n",
+    "                if r!='':\n",
+    "                    l+=[r]\n",
+    "                    count+=1\n",
+    "                    if count==maxsplit:\n",
+    "                        return l+[coll[index:]]\n",
+    "                index+=1   \n",
+    "                r=''\n",
+    "        if r!='':\n",
+    "            l+=[r]\n",
+    "        return l\n",
+    "    else:\n",
+    "        l=[]\n",
+    "        r=''\n",
+    "        for i in coll:\n",
+    "            if i!=ele:\n",
+    "                r+=i\n",
+    "            else:\n",
+    "                # if r!=ele:\n",
+    "                l+=[r]\n",
+    "                r=''\n",
+    "        if r!=ele:\n",
+    "            l+=[r]\n",
+    "        return l\n",
+    "\n",
+    "\n",
+    "# u_split(st,'l',maxsplit=2)\n",
+    "print(u_split(st,' '))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['he', '', 'o wor', 'd wecome to pys']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st='hello world wecome to pys'\n",
+    "st.split('l')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
