--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/assignment.ipynb
@@ -802,6 +802,34 @@
     "        break\n",
     "    # break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not lowercase\n"
+     ]
+    }
+   ],
+   "source": [
+    "#62 wap to check given string is lowercase or not\n",
+    "st='imran '\n",
+    "i=0 \n",
+    "while i<len(st):\n",
+    "    if 'a'<=st[i]<='z':\n",
+    "        if i==len(st)-1:\n",
+    "            print('lowercase')\n",
+    "        pass\n",
+    "    else:\n",
+    "        print('not lowercase')\n",
+    "        break\n",
+    "    i+=1\n"
+   ]
   }
  ],
  "metadata": {
