--- a/py_course/functional_pro/dir_str.ipynb
+++ b/py_course/functional_pro/dir_str.ipynb
@@ -595,6 +595,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello               '"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#just()\n",
+    "#rjust()\n",
+    "#ljust()\n",
+    "st='hello'\n",
+    "st.center(20,'*')\n",
+    "def u_ljust(coll,width,fillchar=' '):\n",
+    "    res=''\n",
+    "    res+=coll+fillchar*(width-len(coll))\n",
+    "    return res\n",
+    "u_ljust(st,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'               hello'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def u_rjust(coll,width,fillchar=' '):\n",
+    "    res=''\n",
+    "    res+=fillchar*(width-len(coll))+coll\n",
+    "    return res\n",
+    "u_rjust(st,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
    "outputs": [
@@ -920,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +989,7 @@
        "7"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,6 +1005,15 @@
     "                return i\n",
     "    return -1\n",
     "u_index(st,'rld')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wap to find first occurense value position\n"
    ]
   },
   {
@@ -1124,13 +1186,507 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hell', ' w', 'rld pyth', 'n prgrm']\n",
+      "['hell', ' w', 'rld pyth', 'n prgrm']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# st='  hello world wecome to pys  '\n",
+    "st='hello world python prgrm'\n",
+    "def u_rsplit(coll,ele=' ',maxsplit=None):\n",
+    "    l=[]\n",
+    "    s=''\n",
+    "    start=0\n",
+    "    end=len(coll)-1\n",
+    "    while end>=start:\n",
+    "        if ele!=coll[end]:\n",
+    "            s=coll[end]+s\n",
+    "        elif len(s)!=0:\n",
+    "            l=[s]+l\n",
+    "            s=''\n",
+    "            if len(l)==maxsplit:\n",
+    "                return [coll[:end]]+l\n",
+    "        end-=1\n",
+    "    if len(s)!=0:\n",
+    "        l=[s]+l\n",
+    "    return l\n",
+    "print(st.rsplit('o',maxsplit=5))\n",
+    "print(u_rsplit(st,'o',maxsplit=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#startswith()\n",
+    "st='i love india i like love'\n",
+    "def u_startswith(coll,sub,start=0,end=None):\n",
+    "    if end==None:\n",
+    "        end=len(sub)\n",
+    "    if end<=start:\n",
+    "        end=start+len(sub)\n",
+    "        return False\n",
+    "    i=0\n",
+    "    while start<end:\n",
+    "        if coll[start]!=sub[i]:\n",
+    "            return False\n",
+    "        start+=1\n",
+    "        i+=1\n",
+    "    return True\n",
+    "print(st.startswith('i like',13,5))\n",
+    "print(u_startswith(st,'i like',13,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#endswith()\n",
+    "st='i love india i like love'\n",
+    "def u_endswith(coll,sub,start=0,end=None):\n",
+    "    if end==None:\n",
+    "        end=len(coll)\n",
+    "    st=''\n",
+    "    while start<end:\n",
+    "        st+=coll[start]\n",
+    "        start+=1\n",
+    "    # print(st)\n",
+    "    i=len(st)-len(sub)\n",
+    "    res=''\n",
+    "    while i<len(st):\n",
+    "        res+=st[i]\n",
+    "        i+=1\n",
+    "    return (res==sub)\n",
+    "print(st.endswith('love'))\n",
+    "print(u_endswith(st,'love'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monday is mass day\n"
+     ]
+    }
+   ],
+   "source": [
+    "#replace()\n",
+    "st='sunday is mass day'\n",
+    "# print(st.replace('s','S',2))\n",
+    "print(st.replace('sun','mon'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday iS maSS day\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='sunday is mass day'\n",
+    "def u_replace_(coll,old,new):\n",
+    "    res=''\n",
+    "    for i in coll:\n",
+    "        if i==old:\n",
+    "            res+=new\n",
+    "        else:\n",
+    "            res+=i\n",
+    "    return res\n",
+    "print(u_replace_(st,'s','S'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sundAy is mAss day\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to replace the specific character for n number of times (or specific occurence)\n",
+    "st='sunday is mass day'\n",
+    "def u_replace(coll,old,new,count=None):\n",
+    "    if count==None:\n",
+    "        count=len(coll)\n",
+    "    co=1\n",
+    "    res=''\n",
+    "    for i in coll:\n",
+    "        if i==old and co<=count:\n",
+    "            res+=new\n",
+    "            co+=1\n",
+    "        else:\n",
+    "            res+=i\n",
+    "    return res\n",
+    "print(u_replace(st,'a','A',2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['he', '', 'o wor', 'd wecome to pys']"
+       "'Munday is a mass day Munday is a holiday Mun'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to replace the sequence of  characters \n",
+    "st='sunday is a mass day sunday is a holiday sun'\n",
+    "def u_seq_replace(coll,old,new,count=None):\n",
+    "    start=0\n",
+    "    while start<len(coll):\n",
+    "        if coll[start]==old[0]:\n",
+    "            if old==coll[start:start+len(old)]:\n",
+    "                coll=coll[0:start]+new+coll[start+len(old):]\n",
+    "        start+=1\n",
+    "    return coll\n",
+    "u_seq_replace(st,'sun','Mun')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Munday is a mass day Munday is a holiday Mun'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to replace the sequenceof  characters n no of times\n",
+    "st='sunday is a mass day sunday is a holiday sun'\n",
+    "def u_seq_occur_replace(coll,old,new,count=None):\n",
+    "    if count==None:\n",
+    "        count=len(coll)\n",
+    "    co=1\n",
+    "    start=0\n",
+    "    while start<len(coll):\n",
+    "        if coll[start]==old[0]:\n",
+    "            if old==coll[start:start+len(old)] and co<=count:\n",
+    "                coll=coll[0:start]+new+coll[start+len(old):]\n",
+    "                co+=1\n",
+    "        start+=1\n",
+    "    return coll\n",
+    "# u_seq_occur_replace(st,'sun','Mun',2)    \n",
+    "u_seq_occur_replace(st,'sun','Mun')    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sunday is a mass day sunday is a holiday mon'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to replace the substring in specific occurense\n",
+    "st='sunday is a mass day sunday is a holiday sun'\n",
+    "def u_occur_replace(coll,old,new,occu):\n",
+    "    count=0\n",
+    "    start=0\n",
+    "    while start<len(coll):\n",
+    "        if old==coll[start:start+len(old)]:\n",
+    "            count+=1\n",
+    "            if count==occu:\n",
+    "                coll=coll[0:start]+new+coll[start+len(old):]\n",
+    "        start+=1\n",
+    "    return coll\n",
+    "u_occur_replace(st,'sun','mon',3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sun 0 3\n",
+      "sun 21 24\n",
+      "sun 41 44\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='sunday is a mass day sunday is a holiday sun'\n",
+    "def u_occur_ofsubstring(coll,old):\n",
+    "    start=0\n",
+    "    while start<len(coll):\n",
+    "        if old==coll[start:start+len(old)]:\n",
+    "            print(coll[start:start+len(old)],start,start+len(old))\n",
+    "        start+=1\n",
+    "u_occur_ofsubstring(st,'sun')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "monday is a mass day sunday is a holiday sun\n"
+     ]
+    }
+   ],
+   "source": [
+    "st='sunday is a mass day sunday is a holiday sun' #without slicing\n",
+    "new='mon'\n",
+    "res=''\n",
+    "start=0\n",
+    "sp1=0\n",
+    "sp2=3\n",
+    "while start<len(st):\n",
+    "    if start<sp1:\n",
+    "        res+=st[start]\n",
+    "    elif sp1==start:\n",
+    "        res+=new\n",
+    "        start=sp2-1#len(new)-1\n",
+    "    else:\n",
+    "        res+=st[start]\n",
+    "    start+=1\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".fb.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "#removeprefix()\n",
+    "# st='hello world haii'\n",
+    "st='www.fb.com'\n",
+    "# print(st.removeprefix('www'))\n",
+    "def u_removeprefix(coll,ele):\n",
+    "    if ele not in coll[0:len(ele)]:\n",
+    "        return coll\n",
+    "    return coll[len(ele):]\n",
+    "print(u_removeprefix(st,'www'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".fb.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "#removeprefix() without slicing\n",
+    "st='www.fb.com'\n",
+    "def u_removeprefix_(coll,ele):\n",
+    "    if ele not in coll[0:len(ele)]:\n",
+    "        return coll\n",
+    "    i=len(ele)\n",
+    "    res=''\n",
+    "    while i<len(coll):\n",
+    "        res+=coll[i]\n",
+    "        i+=1\n",
+    "    return res\n",
+    "print(u_removeprefix_(st,'www'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.fb.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "#removesufix()\n",
+    "st='www.fb.com'\n",
+    "def u_removesufix(coll,ele):\n",
+    "    if ele not in coll[len(coll)-len(ele):]:\n",
+    "        return coll\n",
+    "    i=0 #len(coll)-len(ele)\n",
+    "    res=''\n",
+    "    while i<(len(coll)-len(ele)):\n",
+    "        res+=coll[i]\n",
+    "        i+=1\n",
+    "    return res\n",
+    "print(u_removesufix(st,'com'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#removesufix() using slicing\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello  haii\n"
+     ]
+    }
+   ],
+   "source": [
+    "#strip() \n",
+    "#white space [' ','\\n','\\t','\\r','\\f']\n",
+    "st='hello  haii'\n",
+    "print(st.strip())\n",
+    "# def u_strip(coll,ele=[' ','\\n','\\t','\\r','\\f']):\n",
+    "#     temp=u_lstrip(coll,ele)\n",
+    "#     res=u_rstrip(temp,ele)\n",
+    "#     return res\n",
+    "# u_strip(st,' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n     hello \\t \\n \\rhaii'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lstrip()\n",
+    "# st='      hello  haii    '\n",
+    "st='\\t\\n     hello \\t \\n \\rhaii'\n",
+    "st.lstrip()\n",
+    "def u_lstrip(coll,ele=[' ','\\n','\\t','\\r','\\f']):\n",
+    "    res=''\n",
+    "    for i in range(0,len(coll)):\n",
+    "        if coll[i] in ele:\n",
+    "            res+=''\n",
+    "        else:\n",
+    "            res+=coll[i:]\n",
+    "            break\n",
+    "    return res\n",
+    "u_lstrip(st,'\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]"
       ]
      },
      "execution_count": 38,
@@ -1139,16 +1695,69 @@
     }
    ],
    "source": [
-    "st='hello world wecome to pys'\n",
-    "st.split('l')"
+    "st='dsfj kljdsfl'\n",
+    "print(list(range(len(st))))\n",
+    "list(range(len(st)-1,-1,-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\t\\n     hello \\t \\n \\rhaii'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rstrip()\n",
+    "# st='      hello  haii    '\n",
+    "st='\\t\\n     hello \\t \\n \\rhaii'\n",
+    "st.rstrip()\n",
+    "def u_rstrip(coll,ele=[' ','\\n','\\t','\\r','\\f']):\n",
+    "    res=''\n",
+    "    for i in range (len(coll)-1,-1,-1):\n",
+    "        if coll[i] in ele:\n",
+    "            res+=''\n",
+    "        else:\n",
+    "            res+=coll[:i+1]\n",
+    "            break\n",
+    "    return res\n",
+    "u_rstrip(st,'\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello  haii\n",
+      "hello  haii\n"
+     ]
+    }
+   ],
+   "source": [
+    "#strip() \n",
+    "#white space [' ','\\n','\\t','\\r','\\f']\n",
+    "st='hello  haii'\n",
+    "print(st.strip())\n",
+    "def u_strip(coll,ele=[' ','\\n','\\t','\\r','\\f']):\n",
+    "    temp=u_lstrip(coll,ele)\n",
+    "    res=u_rstrip(temp,ele)\n",
+    "    return res\n",
+    "print(u_strip(st,' '))"
+   ]
   }
  ],
  "metadata": {
