--- a/py_course/functional_pro/functions.ipynb
+++ b/py_course/functional_pro/functions.ipynb
@@ -431,6 +431,141 @@
     "    return -1\n",
     "print(sample(l,10,3,0,10))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 2\n",
+      "3 6\n",
+      "4 24\n",
+      "5 120\n",
+      "6 720\n",
+      "7 5040\n",
+      "8 40320\n",
+      "9 362880\n"
+     ]
+    }
+   ],
+   "source": [
+    "for j in range(1,10):\n",
+    "    a=j\n",
+    "    i=1\n",
+    "    fact=1\n",
+    "    while a:\n",
+    "        # print(a)\n",
+    "        fact*=a\n",
+    "        a-=1   \n",
+    "    print(j,fact) \n",
+    "    fact=1    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "2 2\n",
+      "3 6\n",
+      "4 24\n",
+      "5 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test\n",
+    "#Qno:1 wap tp print a series of factorial numbers given range using nested functions.\n",
+    "def fact1(ran):\n",
+    "    for i in range(1,ran+1):\n",
+    "        a=i\n",
+    "        def fact(num):\n",
+    "            sum=1\n",
+    "\n",
+    "            while num:  \n",
+    "                sum*=num\n",
+    "                num-=1\n",
+    "            print(i,sum)\n",
+    "            sum=1\n",
+    "        fact(a)\n",
+    "fact1(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19*1 => 19\n",
+      "19*2 => 38\n",
+      "19*3 => 57\n",
+      "19*4 => 76\n",
+      "19*5 => 95\n",
+      "19*6 => 114\n",
+      "19*7 => 133\n",
+      "19*8 => 152\n",
+      "19*9 => 171\n",
+      "19*10 => 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2 wap to print 19 table within the given range using functions\n",
+    "#formate: 19*2=38\n",
+    "prange=10\n",
+    "table=19\n",
+    "def mull(tabe,num):\n",
+    "    for i in range(1,num+1):\n",
+    "        print(f'{tabe}*{i} =>',tabe*i)\n",
+    "mull(table,prange)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SrEdIpSyP'"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3 i/p: 'PYSPIDERS'  using functions\n",
+    "#  O/P: 'SrEdIpSyP'\n",
+    "a='PYSPIDERS'\n",
+    "def rev(coll):\n",
+    "    i=0\n",
+    "    res=''\n",
+    "    while i<len(coll):\n",
+    "        if i%2==0:\n",
+    "            res+=coll[i]\n",
+    "        else:\n",
+    "            res+=chr(ord(coll[i])+32)\n",
+    "        i+=1\n",
+    "    return res[::-1]\n",
+    "rev(a)"
+   ]
   }
  ],
  "metadata": {
