--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -3644,6 +3644,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hidi Hello\n",
+      "after converting the string \"hiDi hello\" into title case, the resultant string will be \"Hidi Hello\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SAKETH-48. WAP to convert title case in a given string\n",
+    "#st=\" @Jlanajbkh#anj Sab 77HH   \"\n",
+    "st=\"hiDi hello\"\n",
+    "res=''\n",
+    "count=0\n",
+    "for i in range(len(st)):\n",
+    "    if 'A'<=st[i]<='Z' or 'a'<=st[i]<='z':\n",
+    "        count+=1\n",
+    "        if count==1:\n",
+    "            if 'a'<=st[i]<='z':\n",
+    "                res+=chr(ord(st[i])-32)\n",
+    "            else:\n",
+    "                res+=st[i]\n",
+    "        else:\n",
+    "            if 'A'<=st[i]<='Z':\n",
+    "                res+=chr(ord(st[i])+32)\n",
+    "            else:\n",
+    "                res+=st[i]\n",
+    "    else:\n",
+    "        count=0\n",
+    "        res+=st[i]\n",
+    "print(res)\n",
+    "print('after converting the string \"'+st+'\" into title case, the resultant string will be \"'+res+'\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
